--- a/vite-project/src/Components/ProjectDetail/ProjectDetail.css
+++ b/vite-project/src/Components/ProjectDetail/ProjectDetail.css
@@ -22,11 +22,7 @@ position: relative;
     z-index: -1;
 }
 
-.mywork-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 40px;
-}
+
 
 .mywork-container img {
     box-sizing: border-box;
@@ -52,6 +48,18 @@ font-weight: 500;
 margin-bottom: 80px;
 transition: 0.6s;
 cursor: pointer;
+}
+
+.back-button {
+border: none;
+color: white;
+border-radius: 50px;
+background: linear-gradient(264deg, #0077ff -5.09%, #535353 106.28%);
+font-size: 22px;
+padding: 20px 60px;
+margin: 50px;
+cursor: pointer;
+transition: 0.3s;
 }
 
 .mywork-showmore:hover {
@@ -86,5 +94,9 @@ transition: 0.6s;
     font-size: 18px;
     margin: 50px auto;
     cursor: pointer;
+ }
+ .back-button {
+    padding: 10px 15px;
+    border-radius: 40px;
  }
 }
